--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
       - ./logs:/var/log
       - ./src/themes:/var/www/html/wp-content/themes
       - ./src/plugins:/var/www/html/wp-content/plugins
+      - ./src/uploads:/var/www/html/wp-content/uploads
     environment:
       WORDPRESS_DB_HOST: db:3306
       WORDPRESS_DB_USER: ${MYSQL_USER}
@@ -47,6 +48,7 @@ services:
     volumes:
       - ./src/themes:/var/www/html/wp-content/themes
       - ./src/plugins:/var/www/html/wp-content/plugins
+      - ./src/uploads:/var/www/html/wp-content/uploads
 
   phpmyadmin:
     depends_on:
